# makedeco-optiver

./: .gitignore  README.md  pyproject.toml
notebook/: ensemble.ipynb  preprocess.ipynb  train_catboost.ipynb  train_cnn.ipynb  train_gru.ipynb  train_lgb.ipynb  train_lstm.ipynb  train_xgb.ipynb
slide/: slide.md
